# qaac

./: .gitattributes  ALACEncoderX.cpp  ALACEncoderX.h  ALACPacketDecoder.cpp  ALACPacketDecoder.h  AudioCodec.h  AudioCodecX.h  AudioComponent.h  AudioConverter.h  AudioConverterX.cpp  AudioConverterX.h  AudioConverterXX.cpp  AudioConverterXX.h  AudioFile.h  AudioFileX.h  AudioFormat.h  COPYING  CompositeSource.cpp  CompositeSource.h  CoreAudioCookedEncoder.h  CoreAudioEncoder.cpp  CoreAudioEncoder.h  CoreAudioHelper.h  CoreAudioPacketDecoder.cpp  CoreAudioPacketDecoder.h  CoreAudioPaddedEncoder.cpp  CoreAudioPaddedEncoder.h  CoreAudioResampler.cpp  CoreAudioResampler.h  CoreAudioToolbox.cpp  CoreAudioToolbox.h  EndianConverter.h  ExtAudioFileX.h  FLACPacketDecoder.h  IInputStream.h  ISink.h  ISource.cpp  ISource.h  Limiter.cpp  Limiter.h  (+166 more)
.github/workflows/: ci.yaml
ALAC/: ALACAudioTypes.h  ALACBitUtilities.c  ALACBitUtilities.h  ALACDecoder.cpp  ALACDecoder.h  ALACEncoder.cpp  ALACEncoder.h  EndianPortable.c  EndianPortable.h  ag_dec.c  ag_enc.c  aglib.h  dp_dec.c  dp_enc.c
CoreAudio/: AudioCodec.h  AudioComponent.h  AudioConverter.h  AudioFile.h  AudioFormat.h  CoreAudioTypes.h  CoreFoundation.h  ExtAudioFile.h  MacTypes.h
filters/: ChannelMapper.cpp  ChannelMapper.h  Compressor.cpp  Compressor.h  CoreAudioResampler.cpp  CoreAudioResampler.h  FilterBase.h  Limiter.cpp  Limiter.h  MatrixMixer.cpp  MatrixMixer.h  Normalizer.cpp  Normalizer.h  PipedReader.cpp  PipedReader.h  Quantizer.h  SOXRModule.cpp  SOXRModule.h  Scaler.h  SoXConvolverModule.cpp  SoXConvolverModule.h  SoxLowpassFilter.cpp  SoxLowpassFilter.h  SoxrResampler.cpp  SoxrResampler.h  rng.h
implib/: CoreAudioToolbox.def  CoreAudioToolbox.lib  CoreAudioToolbox64.lib  CoreFoundation.def  CoreFoundation.lib  CoreFoundation64.lib
include/: ALACAudioTypes.h  ALACBitUtilities.h  ALACDecoder.h  ALACEncoder.h  Math64.h  avisynth_c.h  fp.h  inttypes.h  libsoxconvolver.h  libsoxrate.h  sndfile.h  stdint.h  tak_deco_lib.h  wavpack.h
input/: ALACPacketDecoder.cpp  ALACPacketDecoder.h  AvisynthSource.cpp  AvisynthSource.h  CAFFile.cpp  CAFFile.h  CAFSource.cpp  CAFSource.h  CoreAudioPacketDecoder.cpp  CoreAudioPacketDecoder.h  ExtAFSource.cpp  ExtAFSource.h  FLACModule.cpp  FLACModule.h  FLACPacketDecoder.cpp  FLACPacketDecoder.h  FLACSource.cpp  FLACSource.h  InputFactory.cpp  InputFactory.h  LPCMPacketDecoder.cpp  LPCMPacketDecoder.h  LibSndfileSource.cpp  LibSndfileSource.h  MP4Edits.cpp  MP4Edits.h  MP4Source.cpp  MP4Source.h  NullSource.h  OpusPacketDecoder.cpp  OpusPacketDecoder.h  PacketDecoder.h  RawSource.cpp  RawSource.h  TakSource.cpp  TakSource.h  WaveSource.cpp  WaveSource.h  WavpackSource.cpp  WavpackSource.h
mp4v2/: COPYING  GNUmakefile.am  README  configure.ac  make_configure  svninfo
mp4v2/include/mp4v2/: chapter.h  file.h  file_prop.h  general.h  isma.h  itmf_generic.h  itmf_tags.h  mp4v2.h  platform.h  project.h  project.h.in  sample.h  streaming.h  track.h  track_prop.h
mp4v2/libplatform/: config.h.cmake  config.h.in  endian.h  impl.h  platform.h  platform_base.h  platform_posix.h  platform_win32.cpp  platform_win32.h  platform_win32_impl.h  warning.h
mp4v2/libplatform/io/: File.cpp  File.h  FileSystem.cpp  FileSystem.h  FileSystem_posix.cpp  FileSystem_win32.cpp  File_posix.cpp  File_win32.cpp
mp4v2/libplatform/number/: random.h  random_posix.cpp  random_win32.cpp
mp4v2/libplatform/process/: process.h  process_posix.cpp  process_win32.cpp
mp4v2/libplatform/prog/: commandline.h  commandline_posix.cpp  commandline_win32.cpp  option.cpp  option.h
mp4v2/libplatform/sys/: error.cpp  error.h
mp4v2/libplatform/time/: time.cpp  time.h  time_posix.cpp  time_win32.cpp
mp4v2/project/: htmlcombine.py  project.m4.in  project.m4sugar  xml2wiki.py
mp4v2/src/: 3gp.cpp  atom_ac3.cpp  atom_amr.cpp  atom_avc1.cpp  atom_avcC.cpp  atom_chpl.cpp  atom_colr.cpp  atom_d263.cpp  atom_dac3.cpp  atom_damr.cpp  atom_dref.cpp  atom_elst.cpp  atom_enca.cpp  atom_encv.cpp  atom_free.cpp  atom_ftab.cpp  atom_ftyp.cpp  atom_gmin.cpp  atom_hdlr.cpp  atom_hinf.cpp  atom_hnti.cpp  atom_href.cpp  atom_mdat.cpp  atom_mdhd.cpp  atom_meta.cpp  atom_mp4s.cpp  atom_mp4v.cpp  atom_mvhd.cpp  atom_nmhd.cpp  atom_ohdr.cpp  atom_pasp.cpp  atom_root.cpp  atom_rtp.cpp  atom_s263.cpp  atom_sdp.cpp  atom_sdtp.cpp  atom_smi.cpp  atom_sound.cpp  atom_standard.cpp  atom_stbl.cpp  (+60 more)
mp4v2/src/bmff/: bmff.h  impl.h  typebmff.cpp  typebmff.h
mp4v2/src/itmf/: CoverArtBox.cpp  CoverArtBox.h  Tags.cpp  Tags.h  generic.cpp  generic.h  impl.h  itmf.h  type.cpp  type.h
mp4v2/src/qtff/: ColorParameterBox.cpp  ColorParameterBox.h  PictureAspectRatioBox.cpp  PictureAspectRatioBox.h  coding.cpp  coding.h  impl.h  qtff.h
output/: CAFSink.cpp  CAFSink.h  PeakSink.h  WaveOutSink.cpp  WaveOutSink.h  WaveSink.cpp  WaveSink.h  sink.cpp  sink.h
taglib/: audioproperties.cpp  config.h  taglib_config.h  tagunion.cpp
taglib/toolkit/: tfile.cpp
uchardet/: nsLanguageDetector.cpp  nsMBCSGroupProber.cpp  nsSBCSGroupProber.cpp  uchardet.h
vcproject/: qaac.props  qaac.sln
vcproject/alac/: alac.vcxproj  alac.vcxproj.filters
vcproject/alacdec/: alacdec.vcproj  alacdec.vcxproj  alacdec.vcxproj.filters
vcproject/common/: common.vcproj  common.vcxproj  common.vcxproj.filters
vcproject/mp4v2/: mp4v2.vcproj  mp4v2.vcxproj  mp4v2.vcxproj.filters
vcproject/mp4v2/include/mp4v2/: project.h
vcproject/qaac/: qaac.vcproj  qaac.vcxproj  qaac.vcxproj.filters
vcproject/refalac/: refalac.vcxproj  refalac.vcxproj.filters
vcproject/taglib/: taglib.vcxproj  taglib.vcxproj.filters
vcproject/uchardet/: uchardet.vcxproj  uchardet.vcxproj.filters
